--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         // (2)[2, 3, 77]
         a.unshift(99)
         // (3)[99, 2, 3, 77]
+        //2d arrays:-
+        var arr = [[1,2,3],[4,5,6]]
+        //multi dimensional arrays:-
+        var arr2 = [[[1,2,3],[4,5,6]],[[7,8,9],[10,11,12]]]
+        //accessing elements of multi dimensional arrays:-
+        var firstElement = arr2[0][0][0]; // 1
+        var secondElement = arr2[1][1][1]; // 11
         
     </script>
 </body>
+
 </html>
